--- a/dataeng/bucket.yml
+++ b/dataeng/bucket.yml
@@ -1,5 +1,5 @@
 flows:
-  13562e8e-4c6f-4bef-8544-43703455e6a1: {ver: 3, file: SeeClickFix.snapshot, comments: git
-      commit, author: anonymous, created: 1720437304472, flowName: SeeClickFix, flowDesc: ''}
+  13562e8e-4c6f-4bef-8544-43703455e6a1: {ver: 4, file: SeeClickFix.snapshot, comments: '',
+    author: anonymous, created: 1720499164140, flowName: SeeClickFix, flowDesc: ''}
 layoutVer: 1
 bucketId: b8bdc268-b303-49ad-8cae-f78071b31f0c
