--- a/DataLake/bucket.yml
+++ b/DataLake/bucket.yml
@@ -2,5 +2,7 @@ flows:
   022fd5d7-49e1-4e62-ab0b-fb0eba54fc5e: {ver: 1, file: ReadDataLake.snapshot, comments: create
       a flow to read JSON files from local data lake, author: anonymous, created: 1720524342043,
     flowName: ReadDataLake, flowDesc: flow to read JSON files from the data lake}
+  6864571a-75c0-44ac-b4a0-91b7008ce501: {ver: 1, file: datalake_scan.snapshot, comments: '',
+    author: anonymous, created: 1720586727912, flowName: datalake scan, flowDesc: ''}
 layoutVer: 1
 bucketId: 751d6721-5e51-4659-b58d-8af71a2e384a
